Risolte issue rilevate durante la Code Inspection di SonarQube